--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,14 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
-
+pydeseq2
+matplotlib
+numpy
+pandas
+seaborn
+scikit-learn
+sanbomics
+scanpy
 
 # backwards compatibility
 pathlib2
