updated changes to pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,28 @@ Significant_genes_2023_10_12-11_20_41_AM.xlsx
 Significant_genes_2023_10_12-12_04_27_PM.xlsx
 Significant_genes_2023_10_12-12_08_26_PM.xlsx
 Significant_genes_2023_10_12-12_14_53_PM.xlsx
+GEAS_2023_10_16-03_50_07_PM.xlsx
+GEAS_2023_10_16-04_03_46_PM.xlsx
+GEAS_2023_10_16-04_07_08_PM.xlsx
+GEAS_2023_10_16-04_09_21_PM.xlsx
+GEAS_2023_10_16-04_11_54_PM.xlsx
+GEAS_2023_10_16-04_14_53_PM.xlsx
+GEAS_2023_10_16-04_17_49_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-03_50_07_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_03_46_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_07_08_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_09_21_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_11_54_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_14_53_PM.xlsx
+Ranked_genes_by_stat_2023_10_16-04_17_49_PM.xlsx
+Significant_genes_2023_10_16-03_50_07_PM.xlsx
+Significant_genes_2023_10_16-04_03_46_PM.xlsx
+Significant_genes_2023_10_16-04_07_08_PM.xlsx
+Significant_genes_2023_10_16-04_09_21_PM.xlsx
+Significant_genes_2023_10_16-04_11_54_PM.xlsx
+Significant_genes_2023_10_16-04_14_53_PM.xlsx
+Significant_genes_2023_10_16-04_17_49_PM.xlsx
+src/rules/rawReads/ERR062334_1.fastq
+src/rules/rawReads/ERR062334_2.fastq
+src/rules/rawReads/ERR164501_1.fastq
+src/rules/rawReads/ERR164501_2.fastq
