Last updates to the pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,28 @@ src/rules/rawReads/ERR062334_1.fastq
 src/rules/rawReads/ERR062334_2.fastq
 src/rules/rawReads/ERR164501_1.fastq
 src/rules/rawReads/ERR164501_2.fastq
+GEAS_2023_10_17-01_52_11_PM.xlsx
+GEAS_2023_10_17-01_56_00_PM.xlsx
+GEAS_2023_10_17-10_55_27_AM.xlsx
+GEAS_2023_10_17-10_58_19_AM.xlsx
+GEAS_2023_10_17-11_08_25_AM.xlsx
+Ranked_genes_by_stat_2023_10_17-01_52_11_PM.xlsx
+Ranked_genes_by_stat_2023_10_17-01_54_35_PM.xlsx
+Ranked_genes_by_stat_2023_10_17-01_56_00_PM.xlsx
+Ranked_genes_by_stat_2023_10_17-02_07_14_PM.xlsx
+Ranked_genes_by_stat_2023_10_17-02_12_04_PM.xlsx
+Ranked_genes_by_stat_2023_10_17-10_55_27_AM.xlsx
+Ranked_genes_by_stat_2023_10_17-10_58_19_AM.xlsx
+Ranked_genes_by_stat_2023_10_17-11_08_25_AM.xlsx
+Significant_genes_2023_10_17-01_52_11_PM.xlsx
+Significant_genes_2023_10_17-01_54_35_PM.xlsx
+Significant_genes_2023_10_17-01_56_00_PM.xlsx
+Significant_genes_2023_10_17-02_07_14_PM.xlsx
+Significant_genes_2023_10_17-02_12_04_PM.xlsx
+Significant_genes_2023_10_17-10_55_27_AM.xlsx
+Significant_genes_2023_10_17-10_58_19_AM.xlsx
+Significant_genes_2023_10_17-11_08_25_AM.xlsx
+volcano_00.png
+volcano_00.svg
+volcano_01.png
+volcano_01.svg
